updated recent cyber attacks
na lighten ko na yung sa cards and naiklian na den po yung mga sentences

--- a/recent-cyber-attacks/boeing-ransomware.html
+++ b/recent-cyber-attacks/boeing-ransomware.html
@@ -369,30 +369,30 @@
             <h4 class="font-medium text-2xl text-[#E2C8F1]">Read More</h4>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-4" id="read-more">
                 <div>
-                    <img src="../assets/picture-recent-cyber-attacks/icbc-attack.jpg" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
+                    <img src="../assets/picture-recent-cyber-attacks/icbc-read-more.png" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
                     <div class="space-y-4 mt-4">
                         <h5 class="font-medium text-2xl text-left">ICBC Financial Services Ransomware Attack</h5>
-                        <p class="text-left text-gray-200">Get ready for a financial thriller with global implications! ICBC, a banking behemoth, found itself caught in a digital double whammy. First, a LockBit ransomware attack threw a wrench in US Treasury trades, causing ripples in the massive financial markets. Then, just when things seemed to settle, a data breach hit their London branch! This isn't just about one bank's troubles; it's a nail-biting illustration of how interconnected our financial world is and the potential for cyberattacks to send shockwaves across continents.</p>
+                        <p class="text-left text-gray-200">ICBC was hit by a ransomware attack and a data breach in London. These events showed how cyber threats can shake global finance.</p>
                         <div>
                             <a href="icbc-financial-services.html" class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</a>
                         </div>
                     </div>
                 </div>
                 <div>
-                    <img src="../assets/picture-recent-cyber-attacks/schneider-attack.jpg" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
+                    <img src="../assets/picture-recent-cyber-attacks/schneider-read-more.png" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
                     <div class="space-y-4 mt-4">
                         <h5 class="font-medium text-2xl text-left">Schneider Electric Ransomware Attack</h5>
-                        <p class="text-left text-gray-200">Let's journey into the intricate world of industrial giants and the cyber threats they face. Schneider Electric, a powerhouse in automation and digital transformation, found itself in a digital tug-of-war with the Hellcat ransomware group. Picture a locked digital vault containing project secrets and user data, with a hefty ransom demand echoing in the digital corridors. While the core operations remained seemingly untouched, the potential exposure of sensitive information adds a layer of suspense to this industrial cyber drama. It's a stark reminder that even the most robust enterprises are not immune to the persistent claws of ransomware.</p>
+                        <p class="text-left text-gray-200">Schneider Electric faced a ransomware attack by Hellcat. Sensitive data was at risk, proving even strong companies aren't safe.</p>
                         <div>
                             <a href="scheneider-electric.html" class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</a>
                         </div>
                     </div>
                 </div>
                 <div>
-                    <img src="../assets/picture-recent-cyber-attacks/kawasaki-attack.jpg" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
+                    <img src="../assets/picture-recent-cyber-attacks/kawasaki-read-more.jpg" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
                     <div class="space-y-4 mt-4">
                         <h5 class="font-medium text-2xl text-left">Kawasaki Motors Europe Ransomware Attack</h5>
-                        <p class="text-left text-gray-200">A stealthy digital heist targeting the roaring world of Kawasaki motorcycles! RansomHub, a shadowy group of cyber extortionists, allegedly snatched a treasure trove of data from Kawasaki Motors Europe. What makes this tale extra intriguing is the initial hush-hush, with Kawasaki seemingly downplaying the digital drama. But like any good thriller, a plot twist emerged when the stolen secrets were reportedly leaked online after the ransom remained unpaid. It's a fascinating peek behind the corporate curtain, revealing that even when the engine's running smoothly, digital dangers can still lurk in the shadows.</p>
+                        <p class="text-left text-gray-200">RansomHub stole data from Kawasaki Motors Europe. After no ransom was paid, the data was leaked online.</p>
                         <div>
                             <a href="kawasaki-motors.html" class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</a>
                         </div>
