--- a/recent-cyber-attacks/crowdstrike-incident.html
+++ b/recent-cyber-attacks/crowdstrike-incident.html
@@ -368,10 +368,10 @@
             <div class="grid grid-cols-3 gap-4" id="read-more">
 
                 <div>
-                    <img src="../assets/picture-recent-cyber-attacks/change-healthcare.jpeg" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
+                    <img src="../assets/picture-recent-cyber-attacks/change-read-more.jpeg" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
                     <div class="space-y-4 mt-4">
                         <h5 class="font-medium text-2xl text-left">Change Healthcare Ransomware Attack</h5>
-                        <p class="text-left text-gray-200">The ransomware attack caused a "widespread outage, crippling essential functions such as insurance eligibility verification, claims processing, and prescription fulfillment." This directly led to a major IT outage across the healthcare system.</p>
+                        <p class="text-left text-gray-200">A ransomware attack caused a major outage, halting insurance checks, claims processing, and prescription services.</p>
                         <div>
                             <a href="change-healthcare.html" class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</a>
                         </div>
@@ -379,10 +379,10 @@
                 </div>
 
                 <div>
-                    <img src="../assets/picture-recent-cyber-attacks/icbc-attack.jpg" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
+                    <img src="../assets/picture-recent-cyber-attacks/icbc-read-more.png" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
                     <div class="space-y-4 mt-4">
                         <h5 class="font-medium text-2xl text-left">ICBC Financial Services Ransomware Attack</h5>
-                        <p class="text-left text-gray-200">This attack "led to a halt in U.S. Treasury trades and causing considerable payment delays," indicating a significant disruption of their IT systems and operations.</p>
+                        <p class="text-left text-gray-200">ICBC was hit by a ransomware attack and a data breach in London. These events showed how cyber threats can shake global finance.</p>
                         <div>
                             <a href="icbc-financial-services.html" class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</a>
                         </div>
@@ -390,10 +390,10 @@
                 </div>
 
                 <div>
-                    <img src="../assets/picture-recent-cyber-attacks/mgm-attack.jpg" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
+                    <img src="../assets/picture-recent-cyber-attacks/mgm-read-more.png" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
                     <div class="space-y-4 mt-4">
                         <h5 class="font-medium text-2xl text-left">MGM Resorts Phishing Attack</h5>
-                        <p class="text-left text-gray-200">The attack "brought operations across their prominent Las Vegas properties to a near standstill for almost a week," affecting various IT-dependent services like slot machines, hotel bookings, and point-of-sale systems. This was a major IT outage impacting their business.</p>
+                        <p class="text-left text-gray-200">An attack crippled IT systems at major Las Vegas properties, disrupting slots, hotel bookings, and payments for nearly a week.</p>
                         <div>
                             <a href="mgm-resorts.html" class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</a>
                         </div>
