--- a/recent-cyber-attacks/kawasaki-motors.html
+++ b/recent-cyber-attacks/kawasaki-motors.html
@@ -371,10 +371,10 @@
         <div class="grid grid-cols-3 gap-4" id="read-more">
 
             <div>
-                <img src="../assets/picture-recent-cyber-attacks/icbc-attack.jpg" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
+                <img src="../assets/picture-recent-cyber-attacks/icbc-read-more.png" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
                 <div class="space-y-4 mt-4">
                     <h5 class="font-medium text-2xl text-left">ICBC Ransomware Attack</h5>
-                    <p class="text-left text-gray-200">The Industrial and Commercial Bank of China (ICBC) was hit by a ransomware attack that disrupted its US operations, causing significant delays in the settlement of US Treasury trades. The attack highlighted the vulnerabilities in global financial infrastructure and the far-reaching impact of cyber threats on critical financial services.</p>
+                    <p class="text-left text-gray-200">ICBC was hit by a ransomware attack and a data breach in London. These events showed how cyber threats can shake global finance.</p>
                     <div>
                         <a href="icbc-attack.html" class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</a>
                     </div>
@@ -382,10 +382,10 @@
             </div>
 
             <div>
-                <img src="../assets/picture-recent-cyber-attacks/change-healthcare.jpeg" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
+                <img src="../assets/picture-recent-cyber-attacks/change-read-more.jpeg" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
                 <div class="space-y-4 mt-4">
                     <h5 class="font-medium text-2xl text-left">Change Healthcare Ransomware</h5>
-                    <p class="text-left text-gray-200">Change Healthcare, a key player in the US healthcare system, suffered a ransomware attack that disrupted pharmacy services and payment processing nationwide. The incident exposed the healthcare sector's reliance on digital infrastructure and the devastating consequences of cyberattacks on patient care and business continuity.</p>
+                    <p class="text-left text-gray-200">A ransomware attack caused a major outage, halting insurance checks, claims processing, and prescription services.</p>
                     <div>
                         <a href="change-healthcare.html" class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</a>
                     </div>
@@ -393,10 +393,10 @@
             </div>
 
             <div>
-                <img src="../assets/picture-recent-cyber-attacks/boeing.jpg" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
+                <img src="../assets/picture-recent-cyber-attacks/boeing-read-more.png" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
                 <div class="space-y-4 mt-4">
                     <h5 class="font-medium text-2xl text-left">Boeing Ransomware Attack</h5>
-                    <p class="text-left text-gray-200">Boeing, a global aerospace leader, was targeted by the LockBit ransomware group, resulting in the leak of sensitive data. While flight safety was not compromised, the attack underscored the persistent risks faced by critical infrastructure and the importance of robust cybersecurity measures in the aviation industry.</p>
+                    <p class="text-left text-gray-200">Boeing was hit by the LockBit ransomware group with a $200 million demand. Some data leaked, but flight safety wasn’t affected.</p>
                     <div>
                         <a href="boeing-ransomware.html" class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</a>
                     </div>
