--- a/recent-cyber-attacks/truepill-data-breach.html
+++ b/recent-cyber-attacks/truepill-data-breach.html
@@ -358,10 +358,10 @@
         <div class="grid grid-cols-3 gap-4" id="read-more">
 
             <div>
-                <img src="../assets/picture-recent-cyber-attacks/loandepot-attack.jpg" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
+                <img src="../assets/picture-recent-cyber-attacks/loandepot-read-more.png" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
                 <div class="space-y-4 mt-4">
                     <h5 class="font-medium text-2xl text-left">LoanDepot Ransomware Attack</h5>
-                    <p class="text-left text-gray-200">In early January 2024, LoanDepot, a prominent mortgage lending company, became the target of a significant ransomware attack. The ALPHV/BlackCat ransomware group claimed responsibility for the intrusion, successfully breaching LoanDepot's systems. This cyberattack led to the exfiltration of sensitive personal information belonging to a staggering 16.6 million of their customers. The compromised data included a range of highly confidential details, such as names, Social Security numbers, dates of birth, and financial account numbers, placing a vast number of individuals at considerable risk of identity theft and financial fraud.</p>
+                    <p class="text-left text-gray-200">In January 2024, LoanDepot was attacked by the ALPHV group. Hackers stole sensitive data from 16.6 million customers.</p>
                     <div>
                         <a href="loan-depot.html" class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</a>
                     </div>
@@ -369,10 +369,10 @@
             </div>
 
             <div>
-                <img src="../assets/picture-recent-cyber-attacks/mgm-attack.jpg" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
+                <img src="../assets/picture-recent-cyber-attacks/mgm-read-more.png" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
                 <div class="space-y-4 mt-4">
                     <h5 class="font-medium text-2xl text-left">MGM Resorts Phishing Attack</h5>
-                    <p class="text-left text-gray-200">Welcome to the dazzling world of Las Vegas, where the stakes are always high, even in the digital realm! MGM Resorts, a titan of the Strip, found its glittering operations plunged into chaos by a cunning cyberattack, reportedly orchestrated by the Scattered Spider gang. Imagine slot machines going silent and reservation systems grinding to a halt – a digital blackout in the city that never sleeps! The subsequent legal fallout over compromised data adds another layer to this Sin City cyber saga, highlighting the very real consequences of digital vulnerabilities in the entertainment industry.</p>
+                    <p class="text-left text-gray-200">An attack crippled IT systems at major Las Vegas properties, disrupting slots, hotel bookings, and payments for nearly a week.</p>
                     <div>
                         <a href="mgm-resorts.html" class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</a>
                     </div>
@@ -380,10 +380,10 @@
             </div>
 
             <div>
-                <img src="../assets/picture-recent-cyber-attacks/kawasaki-attack.jpg" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
+                <img src="../assets/picture-recent-cyber-attacks/kawasaki-read-more.jpg" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
                 <div class="space-y-4 mt-4">
                     <h5 class="font-medium text-2xl text-left">Kawasaki Motors Europe Cyber Attack</h5>
-                    <p class="text-left text-gray-200">A stealthy digital heist targeting the roaring world of Kawasaki motorcycles! RansomHub, a shadowy group of cyber extortionists, allegedly snatched a treasure trove of data from Kawasaki Motors Europe. What makes this tale extra intriguing is the initial hush-hush, with Kawasaki seemingly downplaying the digital drama. But like any good thriller, a plot twist emerged when the stolen secrets were reportedly leaked online after the ransom remained unpaid. It's a fascinating peek behind the corporate curtain, revealing that even when the engine's running smoothly, digital dangers can still lurk in the shadows.</p>
+                    <p class="text-left text-gray-200">RansomHub stole data from Kawasaki Motors Europe. After no ransom was paid, the data was leaked online.</p>
                     <div>
                         <a href="kawasaki-motors.html" class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</a>
                     </div>
