--- a/recent-cyber-attacks/change-healthcare.html
+++ b/recent-cyber-attacks/change-healthcare.html
@@ -368,11 +368,11 @@
           <h4 class="font-medium text-2xl text-[#E2C8F1]">Read More</h4>
         <div class="grid grid-cols-3 gap-4" id="read-more">
             <div>
-                <img src="../assets/picture-recent-cyber-attacks/boeing.jpg" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
+                <img src="../assets/picture-recent-cyber-attacks/boeing-read-more.png" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
                 <div class="space-y-4 mt-4">
                     <h5 class="font-medium text-2xl text-left">Boeing Ransomware Attack</h5>
                     <p class="text-left text-gray-200">
-                        Fasten your seatbelts for a high-flying cyber tale targeting the giants of the aerospace industry! Boeing, the name synonymous with aviation innovation, found itself in the crosshairs of the notorious LockBit ransomware group. Picture this: a $200 million ransom demand hanging in the digital air! Even though some data took an unauthorized flight online, Boeing assured the world that flight safety remained grounded in security. It's a stark reminder that even the most technologically advanced companies face relentless cyber threats, and the stakes are sky-high when it comes to protecting critical infrastructure.
+                        Boeing was hit by the LockBit ransomware group with a $200 million demand. Some data leaked, but flight safety wasn’t affected.
                     </p>
                     <div>
                         <a href="boeing-ransomware.html" class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</a>
@@ -380,11 +380,11 @@
                 </div>
             </div>
             <div>
-                <img src="../assets/picture-recent-cyber-attacks/loandepot-attack.jpg" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
+                <img src="../assets/picture-recent-cyber-attacks/loandepot-read-more.png" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
                 <div class="space-y-4 mt-4">
                     <h5 class="font-medium text-2xl text-left">LoanDepot Ransomware Attack</h5>
                     <p class="text-left text-gray-200">
-                        In early January 2024, LoanDepot, a prominent mortgage lending company, became the target of a significant ransomware attack. The ALPHV/BlackCat ransomware group claimed responsibility for the intrusion, successfully breaching LoanDepot's systems. This cyberattack led to the exfiltration of sensitive personal information belonging to a staggering 16.6 million of their customers. The compromised data included a range of highly confidential details, such as names, Social Security numbers, dates of birth, and financial account numbers, placing a vast number of individuals at considerable risk of identity theft and financial fraud.
+                        In January 2024, LoanDepot was attacked by the ALPHV group. Hackers stole sensitive data from 16.6 million customers.
                     </p>
                     <div>
                         <a href="loan-depot.html" class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</a>
@@ -392,11 +392,11 @@
                 </div>
             </div>
             <div>
-                <img src="../assets/picture-recent-cyber-attacks/kawasaki-attack.jpg" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
+                <img src="../assets/picture-recent-cyber-attacks/kawasaki-read-more.jpg" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
                 <div class="space-y-4 mt-4">
                     <h5 class="font-medium text-2xl text-left">Kawasaki Motors Europe Ransomware Attack</h5>
                     <p class="text-left text-gray-200">
-                        A stealthy digital heist targeting the roaring world of Kawasaki motorcycles! RansomHub, a shadowy group of cyber extortionists, allegedly snatched a treasure trove of data from Kawasaki Motors Europe. What makes this tale extra intriguing is the initial hush-hush, with Kawasaki seemingly downplaying the digital drama. But like any good thriller, a plot twist emerged when the stolen secrets were reportedly leaked online after the ransom remained unpaid. It's a fascinating peek behind the corporate curtain, revealing that even when the engine's running smoothly, digital dangers can still lurk in the shadows.
+                        RansomHub stole data from Kawasaki Motors Europe. After no ransom was paid, the data was leaked online.
                     </p>
                     <div>
                         <a href="kawasaki-motors.html" class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</a>
