--- a/recent-cyber-attacks/icbc-financial-services.html
+++ b/recent-cyber-attacks/icbc-financial-services.html
@@ -370,11 +370,11 @@
             <div class="grid grid-cols-3 gap-4" id="read-more">
 
                 <div>
-                    <img src="../assets/picture-recent-cyber-attacks/boeing.jpg" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
+                    <img src="../assets/picture-recent-cyber-attacks/boeing-read-more.png" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
                     <div class="space-y-4 mt-4">
                         <h5 class="font-medium text-2xl text-left">Boeing Ransomware Attack</h5>
                         <p class="text-left text-gray-200">
-                            Fasten your seatbelts for a high-flying cyber tale targeting the giants of the aerospace industry! Boeing, the name synonymous with aviation innovation, found itself in the crosshairs of the notorious LockBit ransomware group. Picture this: a $200 million ransom demand hanging in the digital air! Even though some data took an unauthorized flight online, Boeing assured the world that flight safety remained grounded in security. It's a stark reminder that even the most technologically advanced companies face relentless cyber threats, and the stakes are sky-high when it comes to protecting critical infrastructure.
+                            Boeing was hit by the LockBit ransomware group with a $200 million demand. Some data leaked, but flight safety wasn’t affected.
                         </p>
                         <div>
                             <a href="boeing-ransomware.html" class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</a>
@@ -383,11 +383,11 @@
                 </div>
 
                 <div>
-                    <img src="../assets/picture-recent-cyber-attacks/schneider-attack.jpg" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
+                    <img src="../assets/picture-recent-cyber-attacks/schneider-read-more.png" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
                     <div class="space-y-4 mt-4">
                         <h5 class="font-medium text-2xl text-left">Schneider Electric Ransomware Attack</h5>
                         <p class="text-left text-gray-200">
-                            Let's journey into the intricate world of industrial giants and the cyber threats they face. Schneider Electric, a powerhouse in automation and digital transformation, found itself in a digital tug-of-war with the Hellcat ransomware group. Picture a locked digital vault containing project secrets and user data, with a hefty ransom demand echoing in the digital corridors. While the core operations remained seemingly untouched, the potential exposure of sensitive information adds a layer of suspense to this industrial cyber drama. It's a stark reminder that even the most robust enterprises are not immune to the persistent claws of ransomware.
+                            Schneider Electric faced a ransomware attack threatening sensitive data. Core operations were safe, but the risk of exposure remains.
                         </p>
                         <div>
                             <a href="scheneider-electric.html" class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</a>
@@ -396,11 +396,11 @@
                 </div>
 
                 <div>
-                    <img src="../assets/picture-recent-cyber-attacks/kawasaki-attack.jpg" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
+                    <img src="../assets/picture-recent-cyber-attacks/kawasaki-read-more.jpg" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
                     <div class="space-y-4 mt-4">
                         <h5 class="font-medium text-2xl text-left">Kawasaki Motors Europe Ransomware Attack</h5>
                         <p class="text-left text-gray-200">
-                            A stealthy digital heist targeting the roaring world of Kawasaki motorcycles! RansomHub, a shadowy group of cyber extortionists, allegedly snatched a treasure trove of data from Kawasaki Motors Europe. What makes this tale extra intriguing is the initial hush-hush, with Kawasaki seemingly downplaying the digital drama. But like any good thriller, a plot twist emerged when the stolen secrets were reportedly leaked online after the ransom remained unpaid. It's a fascinating peek behind the corporate curtain, revealing that even when the engine's running smoothly, digital dangers can still lurk in the shadows.
+                            RansomHub stole data from Kawasaki Motors Europe. After no ransom was paid, the data was leaked online.
                         </p>
                         <div>
                             <a href="kawasaki-motors.html" class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</a>
