--- a/recent-cyber-attacks/loan-depot.html
+++ b/recent-cyber-attacks/loan-depot.html
@@ -368,10 +368,10 @@
             <div class="grid grid-cols-3 gap-4">
                 
                 <div>
-                    <img src="../assets/picture-recent-cyber-attacks/boeing.jpg" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
+                    <img src="../assets/picture-recent-cyber-attacks/boeing-read-more.png" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
                     <div class="space-y-4 mt-4">
                         <h5 class="font-medium text-2xl text-left">Boeing Ransomware Attack</h5>
-                        <p class="text-left text-gray-200">Fasten your seatbelts for a high-flying cyber tale targeting the giants of the aerospace industry! Boeing, the name synonymous with aviation innovation, found itself in the crosshairs of the notorious LockBit ransomware group. Picture this: a $200 million ransom demand hanging in the digital air! Even though some data took an unauthorized flight online, Boeing assured the world that flight safety remained grounded in security. It's a stark reminder that even the most technologically advanced companies face relentless cyber threats, and the stakes are sky-high when it comes to protecting critical infrastructure.</p>
+                        <p class="text-left text-gray-200">Boeing was hit by the LockBit ransomware group with a $200 million demand. Some data leaked, but flight safety wasn’t affected.</p>
                         <div>
                             <a href="boeing-ransomware.html" class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</a>
                         </div>
@@ -379,10 +379,10 @@
                 </div>
 
                 <div>
-                    <img src="../assets/picture-recent-cyber-attacks/kawasaki-attack.jpg" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
+                    <img src="../assets/picture-recent-cyber-attacks/kawasaki-read-more.jpg" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
                     <div class="space-y-4 mt-4">
                         <h5 class="font-medium text-2xl text-left">Kawasaki Motors Europe Ransomware Attack</h5>
-                        <p class="text-left text-gray-200">A stealthy digital heist targeting the roaring world of Kawasaki motorcycles! RansomHub, a shadowy group of cyber extortionists, allegedly snatched a treasure trove of data from Kawasaki Motors Europe. What makes this tale extra intriguing is the initial hush-hush, with Kawasaki seemingly downplaying the digital drama. But like any good thriller, a plot twist emerged when the stolen secrets were reportedly leaked online after the ransom remained unpaid. It's a fascinating peek behind the corporate curtain, revealing that even when the engine's running smoothly, digital dangers can still lurk in the shadows.</p>
+                        <p class="text-left text-gray-200">RansomHub stole data from Kawasaki Motors Europe. After no ransom was paid, the data was leaked online.</p>
                         <div>
                             <a href="kawasaki-motors.html" class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</a>
                         </div>
@@ -390,10 +390,10 @@
                 </div>
 
                 <div>
-                    <img src="../assets/picture-recent-cyber-attacks/change-healthcare.jpeg" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
+                    <img src="../assets/picture-recent-cyber-attacks/change-read-more.jpeg" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
                     <div class="space-y-4 mt-4">
                         <h5 class="font-medium text-2xl text-left">Change Healthcare Ransomware Attack</h5>
-                        <p class="text-left text-gray-200">Ever wonder what happens when the digital arteries of healthcare get clogged? In a dramatic cyber showdown, Change Healthcare, a vital cog in the US medical machine, found itself in the crosshairs of the notorious BlackCat ransomware gang. Imagine pharmacies unable to fill prescriptions and hospitals facing payment pandemonium – it was a real-life digital emergency! Ultimately, the alleged hefty ransom paid paints a vivid picture of the immense pressure these attacks can inflict, leaving us pondering the true cost of keeping our vital systems safe. Get ready to explore the gripping saga of a healthcare giant brought to its knees by the invisible menace of ransomware.</p>
+                        <p class="text-left text-gray-200">A ransomware attack caused a major outage, halting insurance checks, claims processing, and prescription services.</p>
                         <div>
                             <a href="change-healthcare.html" class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</a>
                         </div>
