update: added links on author name

--- a/recent-cyber-attacks/truepill-data-breach.html
+++ b/recent-cyber-attacks/truepill-data-breach.html
@@ -305,7 +305,7 @@
                 <img src="../assets/profile-picture/cuenco.jpg" alt="Author" class="w-12 h-12 rounded-full object-cover mr-4">
                 </a>
                 <div>
-                    <p class="font-semibold text-base">John Louie Cuenco</p>
+                    <a href="https://elaborate-paprenjak-b3b1e1.netlify.app/" target="_blank"><p class="font-semibold text-base">John Louie Cuenco</p></a>
                     <p class="text-sm text-gray-300">April 11, 2025</p>
                 </div>
             </div>
