--- a/recent-cyber-attacks/boeing-ransomware.html
+++ b/recent-cyber-attacks/boeing-ransomware.html
@@ -306,7 +306,7 @@
                 <img src="../assets/profile-picture/moyaa.jpg" alt="Author" class="w-12 h-12 rounded-full object-cover mr-4">
                 </a>
                 <div>
-                    <p class="font-semibold text-base">Patrick Christopher Moya</p>
+                    <a href="https://sylvie7503.github.io/LandingPage/home.html" target="_blank"><p class="font-semibold text-base">Patrick Christopher Moya</p></a>
                     <p class="text-sm text-gray-300">April 02, 2025</p>
                 </div>
             </div>
