--- a/recent-cyber-attacks/change-healthcare.html
+++ b/recent-cyber-attacks/change-healthcare.html
@@ -305,7 +305,7 @@
                 <img src="../assets/profile-picture/laugo.png" alt="Author" class="w-12 h-12 rounded-full object-cover mr-4">
                 </a>
                 <div>
-                    <p class="font-semibold text-base">Cyril Marius Laugo</p>
+                    <a href="https://biybow.github.io/purtfoillio/portfolio.html" target="_blank"><p class="font-semibold text-base">Cyril Marius Laugo</p></a>
                     <p class="text-sm text-gray-300">April 01, 2025</p>
                 </div>
             </div>
