--- a/recent-cyber-attacks/crowdstrike-incident.html
+++ b/recent-cyber-attacks/crowdstrike-incident.html
@@ -305,7 +305,7 @@
                 <img src="../assets/profile-picture/toledo.jpg" alt="Author" class="w-12 h-12 rounded-full object-cover mr-4">
                 </a>
                 <div>
-                    <p class="font-semibold text-base">Thaddeus Toledo</p>
+                    <a href="https://tadiyusss.github.io/integrative-portfolio/" target="_blank"><p class="font-semibold text-base">Thaddeus Toledo</p></a>
                     <p class="text-sm text-gray-300">April 03, 2025</p>
                 </div>
             </div>
