--- a/recent-cyber-attacks/icbc-financial-services.html
+++ b/recent-cyber-attacks/icbc-financial-services.html
@@ -305,7 +305,7 @@
                 <img src="../assets/profile-picture/pagaduan.jpg" alt="Author" class="w-12 h-12 rounded-full object-cover mr-4">
                 </a>
                 <div>
-                    <p class="font-semibold text-base">Jan Art Pagaduan</p>
+                    <a href="https://freakest.github.io/janart.github.io/LandingPage/index.html" target="_blank"><p class="font-semibold text-base">Jan Art Pagaduan</p></a>
                     <p class="text-sm text-gray-300">April 04, 2025</p>
                 </div>
             </div>
