--- a/recent-cyber-attacks/kawasaki-motors.html
+++ b/recent-cyber-attacks/kawasaki-motors.html
@@ -305,7 +305,7 @@
                 <img src="../assets/profile-picture/paguel.jpg" alt="Author" class="w-12 h-12 rounded-full object-cover mr-4">
                 </a>
                 <div>
-                    <p class="font-semibold text-base">Jess Patrick Paguel</p>
+                    <a href="https://je-sp.github.io/jesshub/index.html" target="_blank"><p class="font-semibold text-base">Jess Patrick Paguel</p></a>
                     <p class="text-sm text-gray-300">April 05, 2025</p>
                 </div>
             </div>
