--- a/recent-cyber-attacks/loan-depot.html
+++ b/recent-cyber-attacks/loan-depot.html
@@ -305,7 +305,7 @@
                 <img src="../assets/profile-picture/pangilinan.jpg" alt="Author" class="w-12 h-12 rounded-full object-cover mr-4">
                 </a>
                 <div>
-                    <p class="font-semibold text-base">Myles Joaquin Pangilinan</p>
+                    <a href="https://joaquinpangilinan.github.io/MPortfolio/" target="_blank"><p class="font-semibold text-base">Myles Joaquin Pangilinan</p></a>
                     <p class="text-sm text-gray-300">April 07, 2025</p>
                 </div>
             </div>
