--- a/recent-cyber-attacks/mgm-resorts.html
+++ b/recent-cyber-attacks/mgm-resorts.html
@@ -305,7 +305,7 @@
                 <img src="../assets/profile-picture/marciano.jpg" alt="Author" class="w-12 h-12 rounded-full object-cover mr-4">
                 </a>
                 <div>
-                    <p class="font-semibold text-base">Latisha Marciano</p>
+                    <a href="https://ltshmarciano.github.io/Personal-Website/" target="_blank"><p class="font-semibold text-base">Latisha Marciano</p></a>
                     <p class="text-sm text-gray-300">April 08, 2025</p>
                 </div>
             </div>
