--- a/recent-cyber-attacks/salt-typhoon.html
+++ b/recent-cyber-attacks/salt-typhoon.html
@@ -305,7 +305,7 @@
                 <img src="../assets/profile-picture/songodanan.jpg" alt="Author" class="w-12 h-12 rounded-full object-cover mr-4">
                 </a>
                 <div>
-                    <p class="font-semibold text-base">Cyrus Songodanan</p>
+                    <a href="https://cyieie.github.io/MTerm-Project/index.html" target="_blank"><p class="font-semibold text-base">Cyrus Songodanan</p></a>
                     <p class="text-sm text-gray-300">April 09, 2025</p>
                 </div>
             </div>
