--- a/recent-cyber-attacks/scheneider-electric.html
+++ b/recent-cyber-attacks/scheneider-electric.html
@@ -305,7 +305,7 @@
                 <img src="../assets/profile-picture/ricafranca.png" alt="Author" class="w-12 h-12 rounded-full object-cover mr-4">
                 </a>
                 <div>
-                    <p class="font-semibold text-base">Edward Allen Ricafranca</p>
+                    <a href="https://edwardallen-ricafranca.github.io/TheTarnishEd/" target="_blank"><p class="font-semibold text-base">Edward Allen Ricafranca</p></a>
                     <p class="text-sm text-gray-300">April 10, 2025</p>
                 </div>
             </div>
