--- a/recent-attacks.html
+++ b/recent-attacks.html
@@ -285,11 +285,11 @@
                 </div>
             </nav>
 
-			<div class="grid md:grid-cols-3 grid-cols-1 max-w-7xl mx-auto md:mt-20 mt-10">
+			<div class="grid md:grid-cols-3 grid-cols-1 max-w-6xl mx-auto md:mt-20 mt-10">
 				<div class="md:col-span-2 col-span-1 flex items-center justify-center">
                     <div class="block px-4">
                         <h4 class="text-5xl font-medium">Recent Cyber Attacks</h4>
-                        <p class="mt-4 text-gray-200 md:text-left text-justify">Lorem ipsum dolor sit amet consectetur adipiscing elit. Consectetur adipiscing elit quisque faucibus ex sapien vitae. Ex sapien vitae pellentesque sem placerat in id. Placerat in id cursus mi pretium tellus duis. Pretium tellus duis convallis tempus leo eu aenean.</p>
+                        <p class="mt-4 text-gray-200 md:text-left text-justify">Explore the most recent cyber attacks affecting governments, corporations, and individuals. Stay updated on how these incidents unfolded, who was targeted, and what lessons we can learn to strengthen our digital defenses.</p>
                     </div>
 				</div>
 				<div class="flex justify-center mt-8 px-4 md:mt-0">
@@ -300,7 +300,7 @@
 
 		
 		<div class="md:px-2 px-4 space-y-4 max-w-6xl mx-auto">
-            <div class="bg-[#141528] p-4 rounded text-white space-y-4 border border-indigo-900">
+            <div class="bg-[#141528] p-4 rounded text-white space-y-4 border border-indigo-900 hover:bg-[#1D1F3E] ease duration-300">
                 <h5 class="text-xl font-medium">Change Healthcare Ransomware Attack</h5>
                 <p>Cybercrime and hacking have a surprisingly long history, beginning as early as 1834 when two brothers manipulated France's telegraph system to steal financial information—arguably the first recorded cyberattack. In the 1940s, René Carmille used his knowledge of punch-card computers to quietly sabotage Nazi data collection, making him one of the earliest ethical hackers. The 1960s and 70s saw the rise of more experimental hacking, like the Creeper virus that moved between computers on ARPANET and its antidote, Reaper—the first antivirus software. As personal computers became more common in the 1980s and 90s, malicious hacking increased, but so did the efforts of white hat hackers trying to protect systems. One of the most famous cases was Kevin Mitnick, who went from infiltrating major corporations to becoming a cybersecurity consultant. Over time, the fight against cybercrime has evolved into a full-blown industry, with experts working daily to defend against increasingly sophisticated digital threats.</p>
                 <div>
@@ -308,7 +308,7 @@
                 </div>
             </div>
 
-            <div class="bg-[#141528] p-4 rounded text-white space-y-4 border border-indigo-900">
+            <div class="bg-[#141528] p-4 rounded text-white space-y-4 border border-indigo-900 hover:bg-[#1D1F3E] ease duration-300">
                 <h5 class="text-xl font-medium">History of Computer Vulnerabilities</h5>
                 <p>Cybersecurity's journey began in 1971 when Bob Thomas created "Creeper," a program that moved across ARPANET, displaying the message "I'm the creeper, catch me if you can!" Though not harmful, it revealed the potential for network vulnerabilities. Ray Tomlinson, known for inventing email, responded with "Reaper," the first antivirus software designed to eliminate Creeper, marking the inception of cybersecurity measures. The 1980s saw a surge in cyber threats, with notable breaches at institutions like AT&T and the Los Alamos National Laboratory, highlighting the need for robust security protocols. Terms like "computer virus" and "trojan horse" emerged, and antivirus solutions such as McAfee's VirusScan became essential tools. The decade also introduced the Morris Worm in 1988, one of the first worms to cause widespread disruption, emphasizing the escalating complexity of cyber threats and the critical importance of cybersecurity defenses.</p>
                 <div>
@@ -316,7 +316,7 @@
                 </div>
             </div>
 
-            <div class="bg-[#141528] p-4 rounded text-white space-y-4 border border-indigo-900">
+            <div class="bg-[#141528] p-4 rounded text-white space-y-4 border border-indigo-900 hover:bg-[#1D1F3E] ease duration-300">
                 <h5 class="text-xl font-medium">LoanDepot Ransomware Attack</h5>
                 <p>Cybersecurity's journey began in 1971 when Bob Thomas created "Creeper," a program that moved across ARPANET, displaying the message "I'm the creeper, catch me if you can!" Though not harmful, it revealed the potential for network vulnerabilities. Ray Tomlinson, known for inventing email, responded with "Reaper," the first antivirus software designed to eliminate Creeper, marking the inception of cybersecurity measures. The 1980s saw a surge in cyber threats, with notable breaches at institutions like AT&T and the Los Alamos National Laboratory, highlighting the need for robust security protocols. Terms like "computer virus" and "trojan horse" emerged, and antivirus solutions such as McAfee's VirusScan became essential tools. The decade also introduced the Morris Worm in 1988, one of the first worms to cause widespread disruption, emphasizing the escalating complexity of cyber threats and the critical importance of cybersecurity defenses.</p>
                 <div>
@@ -324,7 +324,7 @@
                 </div>
             </div>
 
-            <div class="bg-[#141528] p-4 rounded text-white space-y-4 border border-indigo-900">
+            <div class="bg-[#141528] p-4 rounded text-white space-y-4 border border-indigo-900 hover:bg-[#1D1F3E] ease duration-300">
                 <h5 class="text-xl font-medium">Kawasaki Motors Europe Cyber Attack</h5>
                 <p>The evolution of cyber threats has progressed from early computer viruses to sophisticated AI-driven attacks, reflecting the rapid advancement of technology and the increasing value of digital assets. In the 1980s, threats like the Morris Worm highlighted the potential for widespread disruption, leading to the development of antivirus software and firewalls. The 1990s and early 2000s saw the rise of more destructive malware, such as the ILOVEYOU worm, which caused billions in damages, the damage that this particular virus has caused prompted the establishment of dedicated cybersecurity divisions. By the mid-2000s, cybercriminals shifted to advanced persistent threats(APTs), exemplified by Operation Aurora, targeting corporate and government data through prolonged, stealthy intrusions. The 2010s introduced ransomware attacks like WannaCry, exploiting system vulnerabilities for financial gain, and the COVID-19 pandemic further exacerbated cyber threats, with significant breaches in organizations like the WHO. Today, AI-powered cyberattacks employ automation, deep fakes, and personalized phishing, posing significant challenges to traditional cybersecurity measures and necessitating the development of AI-driven defense mechanisms.</p>
                 <div>
@@ -332,7 +332,7 @@
                 </div>
             </div>
 
-            <div class="bg-[#141528] p-4 rounded text-white space-y-4 border border-indigo-900">
+            <div class="bg-[#141528] p-4 rounded text-white space-y-4 border border-indigo-900 hover:bg-[#1D1F3E] ease duration-300">
                 <h5 class="text-xl font-medium">Crowdstrike Incident</h5>
                 <p>The field of ethical hacking involves the use of hacking skills for legal and constructive purposes, often to identify and fix vulnerabilities in systems to improve security. In the list of famous names, the most renowned ethical hackers is Kevin Mitnick, who, after a notorious hacking career, became a leading security consultant and author. Tsutomu Shimomura, a physicist and cybersecurity expert, played a critical role in capturing Mitnick with the help of the FBI. Joanna Rutkowska is known for her groundbreaking work on rootkit vulnerabilities, notably exposing flaws in Windows Vista, while Charlie Miller identified vulnerabilities in Apple products and demonstrated security risks in car systems. Jayson E. Street specializes in physical security penetration and has conducted real-world penetration tests to help organizations secure their premises. Other notable figures in this field include Richard Thieme, Chris Hadnagy, Marc Maiffret, Mohamed Elnouby, and Rafay Baloch, who have all contributed immensely to identifying vulnerabilities in major platforms and improving security standards.</p>
                 <div>
