design: fixed repsonsiveness on future cyber threats overview

--- a/future-cyber-threats.html
+++ b/future-cyber-threats.html
@@ -299,7 +299,7 @@
 		</div>
 
 		
-		<div class="md:px-2 px-4 max-w-7xl mx-auto grid grid-cols-4 gap-4">
+		<div class="md:px-2 px-4 max-w-7xl mx-auto grid md:grid-cols-4 grid-cols-1 gap-4">
             <div class="bg-[#141528] rounded text-white border border-indigo-900">
 				<img src="https://placehold.co/250x250" class="w-full h-52 object-cover rounded-t">
 				<div class="p-4 space-y-2">
