design: fixed responsiveness and border color

--- a/companies-affected.html
+++ b/companies-affected.html
@@ -299,8 +299,8 @@
 		</div>
 
         <div class="md:px-2 px-4 max-w-6xl mx-auto grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4">
-            <div class="bg-[#141528] rounded text-white border border-indigo-900 transform transition-all duration-300 hover:scale-105 h-[400px] overflow-hidden flex flex-col">
-                <img src="./assets/companies-affected-container.png" class="w-full h-44 object-cover rounded-t filter grayscale hover:grayscale-0 transition duration-300">
+            <div class="bg-[#141528] rounded text-white border border-indigo-900 transform transition-all duration-300  hover:bg-[#17182e] h-[400px] overflow-hidden flex flex-col">
+                <img src="./assets/companies-affected-container.png" class="w-full h-44 object-cover rounded-t filter  transition duration-300">
                 <div class="p-4 space-y-2 flex-grow flex flex-col">
                     <h5 class="text-lg font-medium">Famous Cyber Attacked Companies</h5>
                     <p class="text-sm text-gray-300 flex-grow">Dive into real-world examples of high-profile companies that fell victim to cyberattacks. Discover what went wrong and how these incidents shaped the cybersecurity landscape.</p>
@@ -310,8 +310,8 @@
                 </div>
             </div>
 
-            <div class="bg-[#141528] rounded text-white border border-indigo-900 transform transition-all duration-300 hover:scale-105 h-[400px] overflow-hidden flex flex-col">
-                <img src="./assets/financial-impact-container.png" class="w-full h-44 object-cover rounded-t filter grayscale hover:grayscale-0 transition duration-300">
+            <div class="bg-[#141528] rounded text-white border border-indigo-900 transform transition-all duration-300  hover:bg-[#17182e] h-[400px] overflow-hidden flex flex-col">
+                <img src="./assets/financial-impact-container.png" class="w-full h-44 object-cover rounded-t filter  transition duration-300">
                 <div class="p-4 space-y-2 flex-grow flex flex-col">
                     <h5 class="text-lg font-medium">Financial Impact of Breachers</h5>
                     <p class="text-sm text-gray-300 flex-grow">Uncover the hidden costs behind cyber breaches—from revenue loss to reputational damage. This section reveals how attacks hit companies where it hurts most: their bottom line.</p>
@@ -321,8 +321,8 @@
                 </div>
             </div>
     
-            <div class="bg-[#141528] rounded text-white border border-indigo-900 transform transition-all duration-300 hover:scale-105 h-[400px] overflow-hidden flex flex-col">
-                <img src="./assets/recovery-mitigation-measures-container.png" class="w-full h-44 object-cover rounded-t filter grayscale hover:grayscale-0 transition duration-300">
+            <div class="bg-[#141528] rounded text-white border border-indigo-900 transform transition-all duration-300  hover:bg-[#17182e] h-[400px] overflow-hidden flex flex-col">
+                <img src="./assets/recovery-mitigation-measures-container.png" class="w-full h-44 object-cover rounded-t filter  transition duration-300">
                 <div class="p-4 space-y-2 flex-grow flex flex-col">
                     <h5 class="text-lg font-medium">Recovery and Mitigation Measures</h5>
                     <p class="text-sm text-gray-300 flex-grow">Learn how companies bounce back after an attack through strategic recovery plans and enhanced security protocols. Explore best practices that turn crises into opportunities.</p>
@@ -332,8 +332,8 @@
                 </div>
             </div>
 
-            <div class="bg-[#141528] rounded text-white border border-indigo-900 transform transition-all duration-300 hover:scale-105 h-[400px] overflow-hidden flex flex-col">
-                <img src="./assets/legal-ethical-consequences-container.png" class="w-full h-44 object-cover rounded-t filter grayscale hover:grayscale-0 transition duration-300">
+            <div class="bg-[#141528] rounded text-white border border-indigo-900 transform transition-all duration-300  hover:bg-[#17182e] h-[400px] overflow-hidden flex flex-col">
+                <img src="./assets/legal-ethical-consequences-container.png" class="w-full h-44 object-cover rounded-t filter  transition duration-300">
                 <div class="p-4 space-y-2 flex-grow flex flex-col">
                     <h5 class="text-lg font-medium">Legal and Ethical Consequences</h5>
                     <p class="text-sm text-gray-300 flex-grow">Understand the legal battles and ethical dilemmas companies face post-breach. This section highlights the importance of compliance and responsible data handling.</p>
