--- a/recent-cyber-attacks/mgm-resorts.html
+++ b/recent-cyber-attacks/mgm-resorts.html
@@ -367,7 +367,7 @@
 
         <div class="space-y-4 pt-18">
           <h4 class="font-medium text-2xl text-[#E2C8F1]">Read More</h4>
-        <div id="read-more" class="grid grid-cols-3 gap-4">
+        <div id="read-more" class="grid md:grid-cols-3 grid-cols-1 gap-4">
 
             <div>
                 <img src="../assets/picture-recent-cyber-attacks/change-read-more.jpeg" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
