--- a/recent-cyber-attacks/loan-depot.html
+++ b/recent-cyber-attacks/loan-depot.html
@@ -365,7 +365,7 @@
 
         <div class="space-y-4 pt-18" id="read-more">
             <h4 class="font-medium text-2xl text-[#E2C8F1]">Read More</h4>
-            <div class="grid grid-cols-3 gap-4">
+            <div class="grid md:grid-cols-3 grid-cols-1 gap-4">
                 
                 <div>
                     <img src="../assets/picture-recent-cyber-attacks/boeing-read-more.png" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
