--- a/recent-cyber-attacks/truepill-data-breach.html
+++ b/recent-cyber-attacks/truepill-data-breach.html
@@ -355,7 +355,7 @@
 
         <div class="space-y-4 pt-18">
           <h4 class="font-medium text-2xl text-[#E2C8F1]">Read More</h4>
-        <div class="grid grid-cols-3 gap-4" id="read-more">
+        <div class="grid md:grid-cols-3 grid-cols-1 gap-4" id="read-more">
 
             <div>
                 <img src="../assets/picture-recent-cyber-attacks/loandepot-read-more.png" class="w-full h-80 object-cover rounded shadow shadow-indigo-900" alt="">
