--- a/protective-measure/biometric-access-control.html
+++ b/protective-measure/biometric-access-control.html
@@ -376,6 +376,20 @@
                         <p>While secure, biometric systems have their flaws. They can be expensive to install and maintain. If the system fails to recognize a valid user, it can delay access or cause frustration. Hygiene concerns may arise with shared fingerprint scanners. Privacy concerns also exist, as storing biometric data comes with its own security risks. If biometric data is stolen, it can’t be changed like a password. Physical injuries or changes (e.g., cuts, aging) can affect recognition accuracy. Despite these issues, it remains a strong access control method.</p>
                     </div>
 				</div>
+
+				<div>
+					<details class="rounded border shadow" open>
+						<summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
+						References
+						</summary>
+						<div class="px-4 py-2 bg-[#141528] border border-indigo-900">
+						<ul class="list-disc list-inside space-y-1">
+							<li>An introduction to biometric access control. (n.d.). https://security.gallagher.com/en/Blog/An-Introduction-to-Biometric-Access-Control</li>
+							<li>Perez, M. (2023, November 6). Biometric access control: meaning, types and implementation. SMOWL Proctoring | Supervision system for online exams. https://smowl.net/en/blog/biometric-access-control/</li>
+						</ul>
+						</div>
+					</details>
+        		</div>
 			</div>
 		</div>
 		<footer class="text-white w-full p-4 pt-24 bg-[#141528]">
