--- a/protective-measure/firewalls.html
+++ b/protective-measure/firewalls.html
@@ -378,6 +378,20 @@
                         <p>Firewalls cannot stop threats from inside the network, like insider attacks or infected USB drives. If misconfigured, they may block legitimate traffic or allow harmful data. Advanced threats may still bypass firewalls using encryption or stealth. Firewalls require regular updates and monitoring. Basic firewalls lack deep security features like intrusion prevention. Still, they are a necessary first line of defense.</p>
                     </div>
 				</div>
+
+				<div>
+					<details class="rounded border shadow" open>
+						<summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
+						References
+						</summary>
+						<div class="px-4 py-2 bg-[#141528] border border-indigo-900">
+						<ul class="list-disc list-inside space-y-1">
+							<li>What is a Firewall? How Firewalls Work & Types of Firewalls. (2025, May 5). /. https://www.kaspersky.com/resource-center/definitions/firewall</li>
+							<li>Cisco Secure Firewall: first line of defense. (2025, April 10). [Video]. Cisco. https://www.cisco.com/site/us/en/learn/topics/security/what-is-a-firewall.html</li>
+						</ul>
+						</div>
+					</details>
+        		</div>
 			</div>
 		</div>
 		<footer class="text-white w-full p-4 pt-24 bg-[#141528]">
