--- a/protective-measure/motion-detectors.html
+++ b/protective-measure/motion-detectors.html
@@ -377,6 +377,20 @@
                         <p>Motion detectors can produce false alarms due to animals, air vents, or environmental changes. If sensitivity is too low, they may miss real threats. Some types are affected by temperature or interference. They do not identify who is moving only that something is. Without proper integration, they may trigger alerts without action. In large or complex spaces, multiple sensors are required to eliminate blind spots. Despite these issues, they remain a valuable tool in multi-layered security systems.</p>
                     </div>
 				</div>
+
+				<div>
+					<details class="rounded border shadow" open>
+						<summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
+						References
+						</summary>
+						<div class="px-4 py-2 bg-[#141528] border border-indigo-900">
+						<ul class="list-disc list-inside space-y-1">
+							<li>What is a motion sensor? How does a motion sensor work? (n.d.). Tapo. https://www.tapo.com/en/news/369/</li>
+							<li>Webmaster, B. (2025, March 25). Motion Sensors for Business Security: A guide. Bay Alarm. https://www.bayalarm.com/blog/how-do-motion-sensors-work-a-guide/</li>
+						</ul>
+						</div>
+					</details>
+        		</div>
 			</div>
 		</div>
 		<footer class="text-white w-full p-4 pt-24 bg-[#141528]">
