--- a/protective-measure/secure-networks.html
+++ b/protective-measure/secure-networks.html
@@ -363,6 +363,20 @@
 						<p>Building and maintaining a secure network requires expertise and resources. If even one device or user is poorly configured, it can be a weak point. Secure networks may affect speed or access if not designed properly. Monitoring systems can generate too many alerts if not tuned well. Insider threats still pose a risk, even in a secure network. No network is 100% safe, but strong defenses make breaches far less likely.</p>
 					</div>
 				</div>
+
+				<div>
+					<details class="rounded border shadow" open>
+						<summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
+						References
+						</summary>
+						<div class="px-4 py-2 bg-[#141528] border border-indigo-900">
+						<ul class="list-disc list-inside space-y-1">
+							<li>What is network security? (2025, April 14). Cisco. https://www.cisco.com/c/en/us/products/security/what-is-network-security.html</li>
+							<li>What is network security? Definition and types | Fortinet. (n.d.). Fortinet. https://www.fortinet.com/resources/cyberglossary/what-is-network-security/li>
+						</ul>
+						</div>
+					</details>
+        		</div>
 			</div>
 		</div>
 		<footer class="text-white w-full p-4 pt-24 bg-[#141528]">
