--- a/protective-measure/surveillance-cameras.html
+++ b/protective-measure/surveillance-cameras.html
@@ -378,6 +378,20 @@
                         <p>Despite their benefits, surveillance cameras have limitations. They can be expensive to install and maintain, especially in large areas. Privacy concerns often arise, especially in public or employee-monitored spaces. Cameras can be vandalized, covered, or avoided if not positioned properly. In poor lighting or weather, image quality may suffer, making footage less useful. They only record what happens—they don’t prevent it in real time. Cameras also depend on power and network connections, making them vulnerable to outages. Lastly, interpreting footage can be time-consuming and may require trained staff.</p>
                     </div>
 				</div>
+
+				<div>
+					<details class="rounded border shadow" open>
+						<summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
+						References
+						</summary>
+						<div class="px-4 py-2 bg-[#141528] border border-indigo-900">
+						<ul class="list-disc list-inside space-y-1">
+							<li>Cybersecurity features for surveillance systems | Encryption Standards. (n.d.). https://info.verkada.com/surveillance-features/video-data-security/</li>
+							<li>Cioca, P. (2025, April 14). Define Surveillance Camera: A complete guide | ECAM. ECAM. https://ecam.com/security-blog/define-surveillance-camera-a-complete-guide</li>
+						</ul>
+						</div>
+					</details>
+        		</div>
 			</div>
 		</div>
 		<footer class="text-white w-full p-4 pt-24 bg-[#141528]">
