--- a/protective-measure/update-programs-and-systems-regularly.html
+++ b/protective-measure/update-programs-and-systems-regularly.html
@@ -395,6 +395,20 @@
 						<p>Updating systems can cause downtime or disrupt service if not properly scheduled or tested. Compatibility issues may arise, especially with legacy applications. Some critical systems cannot be updated frequently due to operational constraints (e.g., medical equipment in use). If updates are not tested, they might introduce bugs or vulnerabilities. There's also a risk that users ignore update prompts or disable auto-updates. In large organizations, poorly managed updates can lead to patch gaps, leaving some endpoints exposed.</p>
 					</div>
 				</div>
+
+				<div>
+					<details class="rounded border shadow" open>
+						<summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
+						References
+						</summary>
+						<div class="px-4 py-2 bg-[#141528] border border-indigo-900">
+						<ul class="list-disc list-inside space-y-1">
+							<li>Why keeping your software up to date is important for cybersecurity? (2024, May 14). University of Idaho - Knowledge Base. https://support.uidaho.edu/TDClient/40/Portal/KB/ArticleDet?ID=2770</li>
+							<li>Update your devices | Cyber.gov.au. (n.d.). https://www.cyber.gov.au/learn-basics/explore-basics/update-your-devices</li>
+						</ul>
+						</div>
+					</details>
+        		</div>
 			</div>
 		</div>
 		<footer class="text-white w-full p-4 pt-24 bg-[#141528]">
